element style by chain selector

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,13 @@
 <html class="client-js ve-available" lang="ru" dir="ltr"><head>
 <meta charset="UTF-8">
+<head>
+<style>
+	h1 {
+		font-size: 60px;
+		color: red;
+	}
+</style>
+</head>
 <title>Магазин — Википедия</title>
 <body class="mediawiki ltr sitedir-ltr mw-hide-empty-elt ns-0 ns-subject page-Магазин rootpage-Магазин skin-vector action-view">		<div id="mw-page-base" class="noprint"></div>
 		<div id="mw-head-base" class="noprint"></div>
